[project]
name = "rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.7",
    "google-genai>=1.72.0",
    "langchain-community>=0.3.24",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.10.0",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=5.4.0",
]
